fixed overflow bugs

--- a/app/css/uniCSS.css
+++ b/app/css/uniCSS.css
@@ -10,7 +10,7 @@ html, body{
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
 }
-body{
+html,body{
     overflow-x: hidden;
 }
 html{
